--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>microservice-devops-test-project-fake-contract-service</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>my-app</name>
+  <name>microservice-devops-test-project-fake-contract-service</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
